Fixed bug for delete icon alignment that varies.

--- a/src/css/common.blocks/list/__task-text/list__task-text.css
+++ b/src/css/common.blocks/list/__task-text/list__task-text.css
@@ -1,5 +1,7 @@
 @import url('_crossed/list__task-text_crossed.css');
 
 .list__task-text {
-    align-items: left;
+    /* align-items: left; */
+    width: 100%;
+    padding-left: 7px;
 }
